<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_generated_passwords"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mihai.group24_inclass03.GeneratedPasswordsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/thread_list">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/threadList" >

            <TextView
                android:text="@string/pass_gen_th"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passTh" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/thread_list"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/async_list">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/asyncList" >

            <TextView
                android:text="@string/aps_asuyn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passAsync" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:text="@string/fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="77dp"
        android:id="@+id/button" />
</RelativeLayout>
